--- a/client/piek/src/components/LoginForm/LoginForm.sass
+++ b/client/piek/src/components/LoginForm/LoginForm.sass
@@ -1,11 +1,22 @@
-html  
-    background: var(--primaryTextColor)
-    height: 100vh
-   
-
-
-
+*
+    outline: none !important
     
-        
+body  
+    background: var(--bg) !important
+  
+.loginCard
+    position: absolute
+    left: 50%
+    top: 50%
+    transform: translate(-50%, -50%)
+ 
 
-    
+.ub-b-btm-clr_d8dae5
+    background: inherit !important
+
+.ub-color_101840, .ub-color_474d66
+    color: var(--text1) !important
+
+.Button
+    background-color: var(--text1) !important
+    color: var(--textInver) !important
