--- a/client/piek/src/components/Sidebar/Sidebar.sass
+++ b/client/piek/src/components/Sidebar/Sidebar.sass
@@ -12,7 +12,7 @@
     display: flex
     justify-content: center
     align-self: center
-    padding: 15px 0
+    padding: 15px 8px
     width: 100%
     &:nth-last-of-type(2)
         margin-top: auto 
