--- a/client/piek/src/index.sass
+++ b/client/piek/src/index.sass
@@ -4,6 +4,11 @@
     // border: 1px solid var(--border)
     height: 100vh
 
+.tooltip
+    font-size: 12px !important
+    padding: 5px !important
+
+
 .action-icon
     color: var(--text2)
     width: 23px
