--- a/client/piek/src/components/PriorityLayout/PriorityLayout.sass
+++ b/client/piek/src/components/PriorityLayout/PriorityLayout.sass
@@ -1,1 +1,8 @@
-
+.priority-table
+    width: 100%
+    border: 1px solid var(--border)
+    padding: 5rem
+    margin: 5rem 0  
+    td
+        padding: 1rem
+        border-bottom: 1px solid var(--border)
