added and connected PrivateRoute

--- a/client/piek/src/components/LoginForm/LoginForm.sass
+++ b/client/piek/src/components/LoginForm/LoginForm.sass
@@ -4,19 +4,20 @@
 body  
     background: var(--bg) !important
   
+
 .loginCard
     position: absolute
     left: 50%
     top: 50%
     transform: translate(-50%, -50%)
- 
+    input
+        background: inherit !important
 
-.ub-b-btm-clr_d8dae5
-    background: inherit !important
+    label
+        color: var(--text1) !important
+        font-weight: 300
+        font-size: 12px
+    .Button
+        background-color: var(--text1) !important
+        color: var(--textInvert) !important
 
-.ub-color_101840, .ub-color_474d66
-    color: var(--text1) !important
-
-.Button
-    background-color: var(--text1) !important
-    color: var(--textInver) !important
