--- a/client/piek/src/components/PriorityLayout/PriorityLayout.sass
+++ b/client/piek/src/components/PriorityLayout/PriorityLayout.sass
@@ -1,8 +1,33 @@
+
+
 .priority-table
     width: 100%
     border: 1px solid var(--border)
-    padding: 5rem
-    margin: 5rem 0  
-    td
-        padding: 1rem
+    border-radius: var(--br)
+    margin: 30px 0  
+
+    thead th
+        padding: 10px
+        color: var(--text2)
+        font-size: 11px
+        font-weight: 500
         border-bottom: 1px solid var(--border)
+
+    tbody td
+        padding: 10px
+        border-bottom: 1px solid var(--border)
+        color: var(--text2)
+        font-size: 12px
+
+    tbody td:nth-of-type(2),
+    tbody td:nth-of-type(3)
+        font-family: 'IBM Plex Mono'
+        color: var(--text1)
+        font-size: 15px
+
+    tbody td:nth-of-type(4)
+        color: var(--text1)
+        font-size: 14px
+
+    tbody tr:last-of-type td
+        border-bottom: none
