--- a/client/piek/src/theme.css
+++ b/client/piek/src/theme.css
@@ -1,10 +1,14 @@
+
+@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@400;500;600;700&display=swap');
+
 :root{
     --bg: #F6F6FB;
     --text1: rgb(22, 22, 22);
     --text2: #8F8F8F;
     --textInvert: rgba(233, 233, 233);
     --accent: #3763FE;
-    --border: rgba(0,0,0,.1)
+    --border: rgba(0,0,0,.1);
+    --br: 20px;
    
 }
 
