--- a/client/piek/src/components/Sidebar/Sidebar.sass
+++ b/client/piek/src/components/Sidebar/Sidebar.sass
@@ -7,13 +7,25 @@
     left: 0
     height:100vh
     width: 50px 
+    .action-icon
+        display: flex
+        justify-content: center
+        align-self: center
+        padding: 15px 8px
+        width: 100%
+        &:nth-last-of-type(2)
+            margin-top: auto 
+  
+    // @media (max-width: 1000px)
+    //     border-top: 1px solid var(--border)
+    //     position: fixed
+    //     flex-direction: row
+    //     top: 100vh 
+    //     transform: translateY(-100%)
+    //     height: 50px
+    //     width: 100vw
+    //     .action-icon
+    //         &:nth-last-of-type(2)
+    //             margin-top: 0
 
-.action-icon
-    display: flex
-    justify-content: center
-    align-self: center
-    padding: 15px 8px
-    width: 100%
-    &:nth-last-of-type(2)
-        margin-top: auto 
 
