--- a/client/piek/src/index.sass
+++ b/client/piek/src/index.sass
@@ -1,8 +1,17 @@
-.container
+body
+  margin: 0
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',sans-serif
+  -webkit-font-smoothing: antialiased
+  -moz-osx-font-smoothing: grayscale
+
+code 
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace
+
+
+.base-container
     max-width: 1200px
     margin: 0 auto
-    // border: 1px solid var(--border)
-    height: 100vh
+    // padding: 0 10px 0 60px
 
 .tooltip
     font-size: 12px !important
@@ -16,27 +25,37 @@
     &:hover
         color: var(--accent)
 
+    @media (max-width: 900px)
+        svg
+            width: 20px
+            height: 20px 
+
+
 
 .page-header
     position: relative
     display: flex
     padding-top: 20px
+    padding-bottom: 30px
     align-items: center
     color: var(--text1)
     font-size: 16px
     font-weight: bold
+    h2
+       color: var(--text1)
     span
         color: var(--accent)
         margin-bottom: -5px !important
-        padding: 0 1em
+        padding-right: 1em
     .search-box
         position: absolute
         left: 50%
         transform: translateX(-50%)
     .search-input
+        color: var(--text1)
         border-radius: 20px
         border: 1px solid var(--border)
-
+        background: var(--bg)
 
 .action-block
     margin-top: 10px
@@ -47,3 +66,34 @@
     div
         padding: 10px
 
+
+
+.priority-table
+    width: 100%
+    border: 1px solid var(--border)
+    border-radius: var(--br)
+    thead th
+        padding: 10px
+        color: var(--text2)
+        font-size: 11px
+        font-weight: 500
+        border-bottom: 1px solid var(--border)
+
+    tbody td
+        padding: 10px
+        border-bottom: 1px solid var(--border)
+        color: var(--text2)
+        font-size: 12px
+
+    tbody td:nth-of-type(2),
+    tbody td:nth-of-type(3)
+        font-family: 'IBM Plex Mono'
+        color: var(--text1)
+        font-size: 15px
+
+    tbody td:nth-of-type(4)
+        color: var(--text1)
+        font-size: 14px
+
+    tbody tr:last-of-type td
+        border-bottom: none
