--- a/client/piek/src/theme.css
+++ b/client/piek/src/theme.css
@@ -1,12 +1,14 @@
 
 @import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@400;500;600;700&display=swap');
 
+
 :root{
     --bg: #F6F6FB;
     --text1: rgb(22, 22, 22);
     --text2: #8F8F8F;
     --textInvert: rgba(233, 233, 233);
     --accent: #3763FE;
+    --accentLight: #E7E9FB;
     --border: rgba(0,0,0,.1);
     --br: 20px;
    
@@ -19,11 +21,11 @@
 @media (prefers-color-scheme: dark){
     :root {
     --text1: rgb(233, 233, 233);
-    --text2: #d1d1d1;
+    --text2: #919191;
     --textInvert: rgb(0, 0, 0);
     --bg: #000;
     --accent: #987bff;
-    --border: rgba(255,255,255,.2)
+    --border: rgba(255,255,255,.15  )
     }
    }
 
