--- a/client/piek/src/index.sass
+++ b/client/piek/src/index.sass
@@ -68,7 +68,12 @@ body
         border-radius: 20px
         border: 1px solid var(--border)
         background: var(--bg)
-
+        box-shadow: none !important
+        &:active, &:focus
+            border-color: var(--accent) 
+        &::before, &::after
+            display: none !important
+            
 .action-block
     margin-top: 10px
     display: flex
