--- a/client/piek/src/components/Attendance/index.sass
+++ b/client/piek/src/components/Attendance/index.sass
@@ -1,3 +1,39 @@
+$status-101: #00969623
+$status-102: #9a9aff34
+
+.reportMeta
+    display: flex
+    justify-content: flex-end
+    font-size: .8em
+    color: var(--text1)
+    margin: 20px 0
+
+.legend
+    display: flex
+    flex-direction: row
+    font-size: .8em
+    color: var(--text2)
+    line-height: 1.8
+    padding-bottom: 10px
+    div
+        padding-left: 40px
+        position: relative
+        margin: 0 1rem
+    .status-101::before,
+    .status-102::before
+        position: absolute
+        top: 0
+        left: 0
+        content: ''
+        width: 30px
+        height: 20px
+
+    .status-101::before
+        background: $status-101
+    .status-102::before
+        background: $status-102
+
+    
 .reportConfigurator
     $br1: 7px
     display: flex
@@ -21,30 +57,28 @@
             color: var(--accent)
 
 
-    .argument
-        border-left: 1px solid var(--border)
-        border-right: 1px solid var(--border)
-        border-radius: 0
-        padding: 15px 1rem 
-        span
-            color: var(--text2)
-        input 
-            margin: 0 7px
-            box-sizing: border-box
-            background: var(--section)
-            border: none
-            font-weight: 600
-            color: var(--accent)
-            height: 100%
-            width: 25px
-            outline: none !important
+    .arguments
+        display: grid
+        grid-auto-flow: column
+        font-size: .9em
+  
+        .wrap
+            border-left: 1px solid var(--border)
+            border-radius: 0
+            padding: 15px 1rem 
+            span
+                color: var(--text2)
+            input 
+                margin: 0 7px
+                box-sizing: border-box
+                background: var(--section)
+                border: none
+                font-weight: 600
+                color: var(--accent)
+                height: 100%
+                width: 25px
+                outline: none !important
     
-
-p
-    font-size: .8em
-    color: var(--text2)
-    text-align: right
-
 .attendance-table
     border: 1px solid var(--border)
     padding: 10px
@@ -66,7 +100,25 @@ p
 
     tbody td
         border: 1px solid var(--border) !important
-        padding: 3px
+        padding: 0
+        div
+            padding: 2px
+        .status-101
+            background: $status-101
+        // .status-102
+        //     background: $status-102
 
+        &:nth-of-type(1)
+            color: var(--text1)
+            padding-left: 6px
+            
+        &:nth-of-type(2)
+            color: var(--text1)
+            font-weight: 700
+            padding: 0 7px 
+        
+        .eventTime
+            opacity: 1
+            transition: opacity .1s ease 
         .interval
             color: var(--text1)
