--- a/client/piek/src/components/OrderLayout/order-meta.sass
+++ b/client/piek/src/components/OrderLayout/order-meta.sass
@@ -1,7 +1,12 @@
 .OrderLayout
     .Meta
+        background: var(--section) 
+        border-top-right-radius: var(--br)
+        border-bottom-right-radius: var(--br)
+
+
         border-left: 1px solid var(--border)
-        padding: 2rem
+        padding: 2rem 1rem 
 
         pre
             font-size: 11px
@@ -10,10 +15,12 @@
             margin: 0
             opacity: .4
             transition: opacity 300ms ease
+            user-select: none
 
         .SignificantInfo
             display: grid
             grid-template-columns: 1fr 1fr
+            padding-bottom: 20px
             pre
                 opacity: 1
             div
