--- a/client/piek/src/index.sass
+++ b/client/piek/src/index.sass
@@ -14,6 +14,9 @@ body
 .base-container
     max-width: 1416px
     margin: 0 auto
+    @media (max-width: 1500px)
+        margin-left: 50px
+    // padding: 0 50px
     // padding: 0 10px 0 60px
     
 .Container-1200
@@ -71,8 +74,6 @@ body
         box-shadow: none !important
         &:active, &:focus
             border-color: var(--accent) 
-        &::before, &::after
-            display: none !important
             
 .action-block
     margin-top: 10px
