--- a/client/piek/src/theme.css
+++ b/client/piek/src/theme.css
@@ -3,8 +3,8 @@
 
 
 html{
-    --bg: #F6F6FB;
-    --section: rgba(255, 255, 255, 1);
+    --bg: #f7f7fa;
+    --section: #fff;
     --text1: rgba(22, 22, 22, 0.87);
     --text2: #8F8F8F;
     --textInvert: rgba(233, 233, 233);
