--- a/client/piek/src/components/OrderLayout/sass/order-meta.sass
+++ b/client/piek/src/components/OrderLayout/sass/order-meta.sass
@@ -1,10 +1,8 @@
 .OrderLayout
     .Meta
-        background: var(--section) 
-        border-top-right-radius: var(--br)
-        border-bottom-right-radius: var(--br)
-
-
+        // background: var(--section) 
+        // border-top-right-radius: var(--br)
+        // border-bottom-right-radius: var(--br)
         border-left: 1px solid var(--border)
         padding: 2rem 1rem 
 
@@ -23,9 +21,10 @@
             padding-bottom: 20px
             pre
                 opacity: 1
-            div
+            div, input
                 font-size: 1.2rem
                 font-weight: 700
+
             .PaymentHistory
                 padding: 0 4px
                 svg
