autoseparation at orderLayout

--- a/client/piek/src/components/Attendance/index.sass
+++ b/client/piek/src/components/Attendance/index.sass
@@ -48,18 +48,16 @@ $status-102: #72c900
         display: flex
         border-bottom: 2px solid transparent
         div
-            padding: 7px 10px 
+            margin: 5px 7px 
+            padding-bottom: 4px
             color: var(--text2)
             width: fit-content
-            transition: color .2s ease
             &:hover
                 color: var(--accent)
         .active
             // background: var(--accentLight)
             color: var(--accent)
             border-bottom: 2px solid var(--accent)
-
-
 
     .arguments
         display: grid
@@ -85,8 +83,7 @@ $status-102: #72c900
     
 .attendance-table
     border: 1px solid var(--border)
-    padding: 10px
-    // border-radius: var(--br) !important
+    padding: 1em
     font-size: .8em
     color: var(--text2)
     border-collapse: collapse
