--- a/client/piek/src/components/OrderLayout/EditableComponents/EditableInfo.sass
+++ b/client/piek/src/components/OrderLayout/EditableComponents/EditableInfo.sass
@@ -3,8 +3,6 @@
     label
         color: var(--text2)
         font-size: .9rem
-    input
-        color: var(--text1)
     
     .MuiFormControl-root
         width: 100%
@@ -12,6 +10,7 @@
         input, textarea
             height: .8em
             color: var(--text1)
+            font-weight: normal !important
 
 
 
