--- a/client/piek/src/components/PreOrders/index.sass
+++ b/client/piek/src/components/PreOrders/index.sass
@@ -4,6 +4,9 @@
         overflow: hidden !important
         transition: height 200ms ease-out
         margin-bottom: 20px
+        table
+            border: 1px solid var(--border)
+            border-radius: var(--br)
 
 .preorders-container.active
     #grow
