priority layout changes

--- a/client/piek/src/components/Attendance/index.sass
+++ b/client/piek/src/components/Attendance/index.sass
@@ -4,9 +4,8 @@ $status-102: #72c900
 .reportMeta
     display: flex
     justify-content: flex-end
-    font-size: .8em
+    flex-grow: 1
     color: var(--text2)
-    margin: 20px 0
 
 .legend
     display: flex
@@ -82,7 +81,6 @@ $status-102: #72c900
                 outline: none !important
     
 .attendance-table
-    border: 1px solid var(--border)
     padding: 1em
     font-size: .8em
     color: var(--text2)
