--- a/client/piek/src/components/PreOrders/index.sass
+++ b/client/piek/src/components/PreOrders/index.sass
@@ -1,11 +1,13 @@
 .preorders-container
+    table 
+        border: 1px dashed var(--border) !important
+
     #grow
         height: 0
         overflow: hidden !important
-        transition: height 200ms ease-out
+        transition: height 300ms ease
         margin-bottom: 20px
         table
-            border: 1px solid var(--border)
             border-radius: var(--br)
 
 .preorders-container.active
