--- a/client/piek/src/components/PriorityLayout/index.sass
+++ b/client/piek/src/components/PriorityLayout/index.sass
@@ -1,5 +1,93 @@
 $theadHeight: 40px
 
+// Material UI TABS
+.MuiBox-root
+    padding: 20px 0 !important
+
+.priorityTabs
+    display: flex
+    background-color: var(--section) 
+    border-radius: var(--br10)
+    .MuiButtonBase-root 
+        padding: 0 !important
+    .MuiTab-wrapper
+        color: var(--text2)
+        text-transform: none
+        border-right: 1px solid var(--border)
+        font-size: .9rem
+
+    .Mui-selected span
+        color: var(--text1) !important
+
+
+ 
+// Material UI Selet Dropdown
+.managerFilter-form
+    margin-left: auto
+    display: flex
+    align-items: center
+    margin-right: 1em
+  
+    .MuiFormHelperText-root, .MuiSelect-icon
+        color: var(--text2) !important
+        font-size: .9rem !important
+        background: transparent !important
+
+    .filterPlaceholder
+        color: var(--text2)
+        font-size: .8rem
+        padding: 0 8px 
+
+.MuiButtonBase-root
+    font-size: .8rem !important
+.MuiButtonBase-root
+    color: var(--text2) !important
+
+.managerFilter-input    
+    border: 1px solid var(--border) !important
+    border-radius: var(--br10) !important
+    
+.MuiSelect-root
+    font-size: .8rem !important
+    color: var(--text1) !important
+    padding-left: 10px !important
+    width: 120px !important
+    &:active, &:focus
+        background: transparent !important
+.MuiSvgIcon-root
+    top: 50% !important
+    transform: translateY(-50%)
+
+
+.managerFilter-indicator
+    position: relative
+    font-size: .8rem
+    margin: 1rem
+    padding-left: 1rem
+    color: var(--accent)
+    p
+        margin-bottom: 0
+    .circle 
+        width: 7px
+        height: 7px
+        background-color: var(--accent)
+        border-radius: 50%
+        position: absolute
+        top: 50%
+        transform: translateY(-50%)
+        left: 0
+        animation: pulsate 1.5s ease-out
+        animation-iteration-count: infinite
+    
+    @keyframes pulsate 
+        0% 
+            opacity: 0.0
+        50% 
+            opacity: 1.0
+        100% 
+            opacity: 0.0
+    
+
 .priorityTable
     border-top: 1px solid var(--border)
     width: 100%
@@ -13,15 +101,14 @@ $theadHeight: 40px
         text-align: left
 
     tbody td:first-of-type
-        padding: 0 10px
         text-align: center
-        font-size: .7rem
+        font-size: .8rem
 
     tbody td
-        padding: 10px 0
+        padding: 8px 5px
         color: var(--text2)
         border-bottom: 1px solid var(--border)
-        font-size: .8rem
+        font-size: .86rem
    
     tbody td:nth-of-type(2) a,
     tbody td:nth-of-type(3)
@@ -37,4 +124,11 @@ $theadHeight: 40px
 
     tbody tr:last-of-type td
         border-bottom: none
+    
+    tbody td:nth-last-of-type(2),
+    tbody td:nth-last-of-type(3)
+        line-height: 1
+        max-width: 100px
+    .priorityTable-manager
+        font-size: .7rem
 
