--- a/client/piek/src/components/OrderLayout/sass/order-meta.sass
+++ b/client/piek/src/components/OrderLayout/sass/order-meta.sass
@@ -42,5 +42,6 @@
             color: var(--text1)
             font-weight: 300
             padding: 1rem 0
+            white-space: pre-wrap
             pre
                 padding-bottom: .5rem
