--- a/client/piek/src/materialUI.sass
+++ b/client/piek/src/materialUI.sass
@@ -13,3 +13,17 @@
 
     input, textarea
         color: var(--text1)
+
+//Expansion Panel (preOrders)
+.MuiExpansionPanel-root
+    box-shadow: none !important
+    .MuiExpansionPanelDetails-root, .MuiExpansionPanelSummary-root
+        padding: 0 !important
+
+.MuiExpansionPanelSummary-root
+    height: 40px !important
+    min-height: 0 !important
+    margin: 0 !important
+    .Mui-expanded
+        height: 40px !important
+        margin: 0 !important
