--- a/client/piek/src/components/OrderLayout/sass/index.sass
+++ b/client/piek/src/components/OrderLayout/sass/index.sass
@@ -108,8 +108,10 @@
             .Docs
                 padding: 1rem
                 border-left: 1px solid var(--border)
-                div
+                a
                     display: flex
+                    color: var(--text1)
+                    text-decoration: none
 
                 .file-name
                     font-family: 'IBM Plex Mono'
