--- a/client/piek/src/components/PriorityLayout/index.sass
+++ b/client/piek/src/components/PriorityLayout/index.sass
@@ -6,8 +6,8 @@ $theadHeight: 40px
 
 .priorityTabs
     display: flex
-    background-color: var(--section) 
-    border-radius: var(--br10)
+    // background-color: var(--section) 
+    border-bottom: 1px solid var(--border)
     .MuiButtonBase-root 
         padding: 0 !important
     .MuiTab-wrapper
@@ -15,7 +15,6 @@ $theadHeight: 40px
         text-transform: none
         border-right: 1px solid var(--border)
         font-size: .9rem
-
     .Mui-selected span
         color: var(--text1) !important
 
