--- a/client/piek/src/components/PreOrders/index.sass
+++ b/client/piek/src/components/PreOrders/index.sass
@@ -1,8 +1,10 @@
 .preorders-container
+    // margin-bottom: 50px !important
+    margin-top: 1rem
+
     table 
         border: 1px dashed var(--border) !important
         border-radius: var(--br)
-        margin-bottom: 50px !important
 
 .preorders-container.active
     svg
