--- a/client/piek/src/components/Sidebar/index.sass
+++ b/client/piek/src/components/Sidebar/index.sass
@@ -14,6 +14,7 @@
         align-self: center
         padding: 15px 5px 
         width: 100%
+        color: var(--text2)
         &:nth-last-of-type(3)
             margin-top: auto 
     .sidebar-active 
@@ -26,16 +27,3 @@
     &:hover
         .action-icon.hidden
             opacity: 1
-    // @media (max-width: 1000px)
-    //     border-top: 1px solid var(--border)
-    //     position: fixed
-    //     flex-direction: row
-    //     top: 100vh 
-    //     transform: translateY(-100%)
-    //     height: 50px
-    //     width: 100vw
-    //     .action-icon
-    //         &:nth-last-of-type(2)
-    //             margin-top: 0
-
-
