--- a/client/piek/src/index.sass
+++ b/client/piek/src/index.sass
@@ -26,12 +26,6 @@ input[type=number]
     margin: 0 auto
     @media (max-width: 1500px)
         margin-left: 50px
-    // padding: 0 50px
-    // padding: 0 10px 0 60px
-    
-// .Container-1200
-//     max-width: 1200px
-//     margin: 0 auto
 
 .tooltip
     font-size: 12px !important
@@ -74,6 +68,7 @@ input[type=number]
 .action-block
     // margin-top: 10px
     display: flex
+    justify-content: flex-end
     margin-left: auto
     z-index: 100
     div
