apollo JWT validation middleware.

--- a/client/piek/src/materialUI.sass
+++ b/client/piek/src/materialUI.sass
@@ -15,12 +15,12 @@
         color: var(--text1)
 
 //Expansion Panel (preOrders)
-.MuiExpansionPanel-root
+.MuiAccordion-root
     box-shadow: none !important
-    .MuiExpansionPanelDetails-root, .MuiExpansionPanelSummary-root
+    .MuiAccordionDetails-root, .MuiAccordionSummary-root
         padding: 0 !important
 
-.MuiExpansionPanelSummary-root
+.MuiAccordionSummary-root
     height: 40px !important
     min-height: 0 !important
     margin: 0 !important
