--- a/client/piek/src/index.sass
+++ b/client/piek/src/index.sass
@@ -93,9 +93,9 @@ input[type=number]
         width: 20px
         color: var(--text2)
     &:hover  
-        background: var(--accent)   
+        // background: var(--accent)   
         svg 
-            color: var(--bg)
+            color: var(--accent)
             
 
 .tableWrap
