--- a/client/piek/src/materialUI.sass
+++ b/client/piek/src/materialUI.sass
@@ -1,4 +1,8 @@
 //Material UI TextInput 
+.MuiOutlinedInput-root
+    border: 1px solid var(--border) !important
+    border-radius: var(--br10)
+
 .MuiInputBase-root
     &:hover 
         &::before
@@ -27,3 +31,10 @@
     .Mui-expanded
         height: 40px !important
         margin: 0 !important
+
+
+//Dialog 
+.MuiDialogContent-root
+    border-color: var(--border) !important
+.MuiDialogTitle-root h2
+    color: var(--text1) !important
