--- a/client/piek/src/components/OrderLayout/sass/index.sass
+++ b/client/piek/src/components/OrderLayout/sass/index.sass
@@ -1,5 +1,3 @@
-@import 'composition'
-    
 .base-container section
     // background: var(--section)  
     border-radius: var(--br)
@@ -7,7 +5,7 @@
     min-height: 80vh
     padding: 0
 
-
+    
 .inCloudconIcon
     position: fixed
     top: 50%
@@ -28,13 +26,26 @@
     input
         color: var(--text1) !important
     .MuiTypography-root
-        color: var(--text2) !important
+        color: var(--text2) 
         span
-            color: var(--text1)
+            font-weight: 500 
+            color: var(--text1) !important
+
     .dialog-danger-btn
-        color: var(--danger)
         text-transform: initial !important
 
+        span
+            color: var(--danger)
+
+.partitionHeading
+    color: var(--text2)
+    border-bottom: 1px dashed var(--border)
+    padding: .5em 1em 
+    font-weight: 300
+    font-size: .9rem
+
+.Composition
+    border-bottom: 1px solid var(--border)
         
 .OrderLayout
     display: grid
@@ -50,7 +61,6 @@
             grid-template-columns: 1fr 1fr
             border-bottom: 1px solid var(--border)
             .CheckList
-                padding: 1rem 0
                 font-size: 1rem
 
 
@@ -84,8 +94,9 @@
 
 
             .Docs
-                padding: 1rem
                 border-left: 1px solid var(--border)
+                .filesContainer
+                    padding: 1em
                 a
                     display: flex
                     color: var(--text1)
